order service call to inventory service using webclient

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 server.port=8089
+
+address-service.base.url=http://localhost:8088
