--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/micro_ecommerce?useSSL=false&a
 spring.datasource.username=root
 spring.datasource.password=54321
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+
+#create-drop for data in main class
+spring.jpa.hibernate.ddl-auto = create-drop
 server.port=8088
