--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.jpa.show-sql = true
 
 #create-drop for data in main class
 spring.jpa.hibernate.ddl-auto = create-drop
-server.port=8088
+#to generate random port number use 0
+server.port=8089
+spring.application.name = inventory-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
