--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_ecommerce?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=54321
-
 spring.jpa.show-sql = true
+
 spring.jpa.hibernate.ddl-auto = update
+server.port=8091
+spring.application.name=order-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-server.port=8089
+inventory-service.base.url = http://localhost:8089
 
-address-service.base.url=http://localhost:8088
+
