--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=54321
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+spring.application.name=product-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
